--- a/components/camel-keycloak/src/main/docs/keycloak-component.adoc
+++ b/components/camel-keycloak/src/main/docs/keycloak-component.adoc
@@ -2,12 +2,44 @@
 :doctitle: Keycloak
 :shortname: keycloak
 :artifactid: camel-keycloak
-:description: Security using Keycloak
+:description: Manage Keycloak instances via Admin API.
 :since: 4.15
 :supportlevel: Preview
 :tabs-sync-option:
+:component-header: Only producer is supported
+//Manually maintained attributes
+:camel-spring-boot-name: keycloak
 
 *Since Camel {since}*
+
+*{component-header}*
+
+The Keycloak component supports running operations on Keycloak instance and policy enforcements.
+
+
+== URI Format
+
+-------------------------
+keycloak://label[?options]
+-------------------------
+
+You can append query options to the URI in the following format:
+
+`?options=value&option2=value&...`
+
+
+// component-configure options: START
+
+// component-configure options: END
+
+// component options: START
+include::partial$component-configure-options.adoc[]
+include::partial$component-endpoint-options.adoc[]
+// component options: END
+
+// endpoint options: START
+
+// endpoint options: END
 
 The Keycloak security policy provides route-level authorization using Keycloak authentication and authorization services.
 
